// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentResultsFooter component renders correctly 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways clear-downloads Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
      data-testid="anchor-link"
      type="button"
    >
      <span>
        MC: downloadList.clear
      </span>
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
      data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (4)\\",\\"action\\":\\"[\\\\\\"http://doesnot-exist.com/fileName\\\\\\",\\\\\\"http://pimDocument\\\\\\",\\\\\\"http://pimDocument\\\\\\"]\\"}"
      data-testid="document-table-download-button"
      tabindex="0"
      type="button"
    >
      MC: downloadList.download (4)
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <p
      class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-87ejlm-MuiTypography-root"
      data-testid="typography"
    >
      This site is protected by reCAPTCHA and the Google 
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-testid="anchor-link"
        href="https://policies.google.com/privacy"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Privacy Policy
        </span>
      </a>
       and 
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-testid="anchor-link"
        href="https://policies.google.com/terms"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Terms of Service
        </span>
      </a>
       apply.
    </p>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if download item is array 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways clear-downloads Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
      data-testid="anchor-link"
      type="button"
    >
      <span>
        MC: downloadList.clear
      </span>
    </a>
    <button
      class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-11nrv4h-MuiButtonBase-root-MuiButton-root"
      data-gtm="{\\"id\\":\\"download3-button1\\",\\"label\\":\\"MC: downloadList.download (2)\\",\\"action\\":\\"[\\\\\\"http://pimDocument\\\\\\",\\\\\\"http://pimDocument\\\\\\"]\\"}"
      data-testid="document-table-download-button"
      tabindex="0"
      type="button"
    >
      MC: downloadList.download (2)
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <p
      class="MuiTypography-root MuiTypography-body1 RecaptchaPrivacyLinks css-87ejlm-MuiTypography-root"
      data-testid="typography"
    >
      This site is protected by reCAPTCHA and the Google 
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-testid="anchor-link"
        href="https://policies.google.com/privacy"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Privacy Policy
        </span>
      </a>
       and 
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1m0txtt-MuiTypography-root-MuiLink-root"
        data-testid="anchor-link"
        href="https://policies.google.com/terms"
        rel="noreferrer noopener"
        target="_blank"
      >
        <span>
          Terms of Service
        </span>
      </a>
       apply.
    </p>
  </div>
</div>
`;

exports[`DocumentResultsFooter component renders correctly if onDownloadClick not passed 1`] = `
<div>
  <div
    class="DocumentResultsFooter"
  />
</div>
`;
